2011-04-24  Rik Cabanier  <cabanier@adobe.com>

        Reviewed by Simon Fraser.

        Tables are not rendered correctly
        https://bugs.webkit.org/show_bug.cgi?id=59138

        * fast/table/auto-100-percent-width.html: Added.
        * platform/mac/fast/table/auto-100-percent-width-expected.txt: Added.

2011-04-23  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/8970549> WebFindOptionsAtWordStarts fails with Japanese words
        https://bugs.webkit.org/show_bug.cgi?id=59288

        * editing/text-iterator/findString-expected.txt:
        * editing/text-iterator/findString.html:

2011-04-23  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        [V8] Nodes in shadow DOM should not be GCed while their hosts are alive
        https://bugs.webkit.org/show_bug.cgi?id=59284

        * fast/dom/shadow/gc-shadow-expected.txt: Added.
        * fast/dom/shadow/gc-shadow.html: Added.

2011-04-23  MORITA Hajime <morrita@google.com>

        Unreviewed test_expectations.txt update.
        r84745 didn't fix meter-element.html break on chromium.
        
        * platform/chromium/test_expectations.txt:

2011-04-23  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        REGRESSION: (non-Mac) <meter>'s bar part isn't rendered for with -webkit-writing-mode: vertical-lr from r82899
        https://bugs.webkit.org/show_bug.cgi?id=59281
        
        * fast/dom/HTMLMeterElement/meter-writing-mode.html: Added.
        * fast/dom/HTMLProgressElement/progress-writing-mode.html: Added.
        * platform/chromium/test_expectations.txt:
        * platform/mac/fast/dom/HTMLMeterElement/meter-writing-mode-expected.png: Added.
        * platform/mac/fast/dom/HTMLMeterElement/meter-writing-mode-expected.txt: Added.
        * platform/mac/fast/dom/HTMLProgressElement/progress-writing-mode-expected.png: Added.