@@ -1,3 +1,15 @@
+2011-04-24  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Maciej Stachowiak.
+
+        Test canonicalization of scheme:/host
+        https://bugs.webkit.org/show_bug.cgi?id=59296
+
+        * fast/url/script-tests/segments.js:
+        * fast/url/script-tests/standard-url.js:
+        * fast/url/segments-expected.txt:
+        * fast/url/standard-url-expected.txt:
+
 2011-04-24  Rik Cabanier  <cabanier@adobe.com>
 
         Reviewed by Simon Fraser.
